--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.6.6'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	id 'com.google.cloud.tools.jib' version '3.2.1'
 }
 
 group = 'om.graphql-java.tutorial'
@@ -22,6 +23,31 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
+springBoot {
+	mainClass = 'com.graphqljava.tutorial.bookdetails.BookDetailsApplication'
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
+}
+
+jib {
+	from {
+		image = 'openjdk:alpine'
+	}
+	to {
+		image = 'ni920/graphql-helloworld/0.0.1'
+		credHelper = 'osxkeychain'
+		tags = ['latest']
+		containerizingMode = 'packaged'
+
+	}
+	container {
+		//jvmFlags = ['-Dmy.property=example.value', '-Xms512m', '-Xdebug']
+		//mainClass = 'com.graphqljava.tutorial.bookdetails.BookDetailsApplication'
+		ports = ['8090']
+		format = 'OCI'
+		creationTime = 'USE_CURRENT_TIMESTAMP'
+
+	}
 }
