--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,8 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'junit:junit:4.13.1'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'com.graphql-java:graphql-java:18.1' // NEW
 	implementation 'com.graphql-java:graphql-java-spring-boot-starter-webmvc:2.0' // NEW
 	implementation 'com.google.guava:guava:31.1-jre' // NEW
